--- a/index.html
+++ b/index.html
@@ -1120,128 +1120,129 @@
                         guests with more than just a tour, but a life-changing journey.
                     </p> -->
                     <p>
-            Kilimora Adventure was founded by <strong>Franklin E. Moshi</strong> and 
-            <strong>Diana T. Mungure</strong>, built on a strong foundation of 
-            complementary expertise and professional excellence.
-        </p>
+                        Kilimora Adventure was founded by <strong>Franklin E. Moshi</strong> and
+                        <strong>Diana T. Mungure</strong>, built on a strong foundation of
+                        complementary expertise and professional excellence.
+                    </p>
 
-        <p>
-            <strong>Franklin E. Moshi</strong> brings over five years of hands-on 
-            operational experience as a seasoned tour guide and driver, ensuring 
-            that every journey is executed with precision, safety, and attention 
-            to detail. His in-depth knowledge of destinations and logistics 
-            guarantees seamless travel experiences for every client.
-        <br>
-            <strong>Diana T Mungure</strong> contributes more than a decade of 
-            high-level experience managing U.S.-funded projects, delivering 
-            exceptional organizational leadership and adherence to international 
-            standards. Her background brings world-class structure, accountability, 
-            and professionalism to the tourism industry.
-        </p>
+                    <p>
+                        <strong>Franklin E. Moshi</strong> brings over five years of hands-on
+                        operational experience as a seasoned tour guide and driver, ensuring
+                        that every journey is executed with precision, safety, and attention
+                        to detail. His in-depth knowledge of destinations and logistics
+                        guarantees seamless travel experiences for every client.
+                        <br>
+                        <strong>Diana T Mungure</strong> contributes more than a decade of
+                        high-level experience managing U.S.-funded projects, delivering
+                        exceptional organizational leadership and adherence to international
+                        standards. Her background brings world-class structure, accountability,
+                        and professionalism to the tourism industry.
+                    </p>
 
-        <p class="highlight-text">
-            Together, they have established Kilimora Adventure with a shared vision: 
-            to transform ordinary travel into immersive, meaningful, and life-changing experiences.
-        </p>
+                    <p class="highlight-text">
+                        Together, they have established Kilimora Adventure with a shared vision:
+                        to transform ordinary travel into immersive, meaningful, and life-changing experiences.
+                    </p>
 
-        <p>
-            Kilimora Adventure exists to redefine travel through authenticity, 
-            cultural connection, and exceptional service. We craft carefully curated 
-            expeditions that inspire discovery, personal growth, and lasting memories. 
-            Every itinerary reflects our unwavering commitment to quality, integrity, 
-            and unforgettable exploration.
-        </p>
+                    <p>
+                        Kilimora Adventure exists to redefine travel through authenticity,
+                        cultural connection, and exceptional service. We craft carefully curated
+                        expeditions that inspire discovery, personal growth, and lasting memories.
+                        Every itinerary reflects our unwavering commitment to quality, integrity,
+                        and unforgettable exploration.
+                    </p>
 
-        <p class="closing-text">
-            With <strong>Franklin’s</strong> field expertise and 
-            <strong>Diana’s</strong> strategic leadership, we deliver seamless, 
-            professionally executed journeys designed to exceed expectations.
-        </p>
-        <style>
-    .about-modern {
-    padding: 60px 30px;
-    max-width: 650px;
-}
-/* Main Heading */
-.main-title {
-    font-size: 38px;
-    font-weight: 700;
-    color: #2b2b2b;
-    line-height: 1.3;
-    margin-bottom: 10px;
-}
+                    <p class="closing-text">
+                        With <strong>Franklin’s</strong> field expertise and
+                        <strong>Diana’s</strong> strategic leadership, we deliver seamless,
+                        professionally executed journeys designed to exceed expectations.
+                    </p>
+                    <style>
+                        .about-modern {
+                            padding: 60px 30px;
+                            max-width: 650px;
+                        }
 
-/* Tagline */
-.tagline {
-    font-size: 18px;
-    font-weight: 400;
-    color: #666;
-    font-style: italic;
-    margin-bottom: 35px;
-}
+                        /* Main Heading */
+                        .main-title {
+                            font-size: 38px;
+                            font-weight: 700;
+                            color: #2b2b2b;
+                            line-height: 1.3;
+                            margin-bottom: 10px;
+                        }
 
-/* Paragraphs */
-.about-content p {
-    font-size: 17px;
-    line-height: 1.5;
-    color: #555;
-    text-align: justify;
-    margin-bottom: 22px;
-    font-weight: 400;
-}
+                        /* Tagline */
+                        .tagline {
+                            font-size: 18px;
+                            font-weight: 400;
+                            color: #666;
+                            font-style: italic;
+                            margin-bottom: 35px;
+                        }
 
-/* Highlight Vision Paragraph */
-.highlight-text {
-    font-size: 18px;
-    font-weight: 500;
-    color: #2b2b2b;
-    background: #f4efe9;
-    padding: 20px;
-    border-left: 4px solid #a67c52;
-    border-radius: 8px;
-}
+                        /* Paragraphs */
+                        .about-content p {
+                            font-size: 17px;
+                            line-height: 1.5;
+                            color: #555;
+                            text-align: justify;
+                            margin-bottom: 22px;
+                            font-weight: 400;
+                        }
 
-/* Closing Statement */
-.closing-text {
-    font-size: 18px;
-    font-weight: 500;
-    color: #2b2b2b;
-}
+                        /* Highlight Vision Paragraph */
+                        .highlight-text {
+                            font-size: 18px;
+                            font-weight: 500;
+                            color: #2b2b2b;
+                            background: #f4efe9;
+                            padding: 20px;
+                            border-left: 4px solid #a67c52;
+                            border-radius: 8px;
+                        }
 
-/* Strong Name Styling */
-.about-content strong {
-    color: #4B2E18;
-    font-weight: 600;
-}
+                        /* Closing Statement */
+                        .closing-text {
+                            font-size: 18px;
+                            font-weight: 500;
+                            color: #2b2b2b;
+                        }
 
-/* Smooth fade text effect */
-.about-modern {
-    animation: fadeUp 1s ease-in-out;
-}
+                        /* Strong Name Styling */
+                        .about-content strong {
+                            color: #4B2E18;
+                            font-weight: 600;
+                        }
 
-@keyframes fadeUp {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
+                        /* Smooth fade text effect */
+                        .about-modern {
+                            animation: fadeUp 1s ease-in-out;
+                        }
 
-</style>
-        <p>
+                        @keyframes fadeUp {
+                            from {
+                                opacity: 0;
+                                transform: translateY(20px);
+                            }
 
-            <!-- start css about us  -->
-             
-             <!-- end css about us  -->
+                            to {
+                                opacity: 1;
+                                transform: translateY(0);
+                            }
+                        }
+                    </style>
+                    <p>
+
+                        <!-- start css about us  -->
+
+                        <!-- end css about us  -->
 
 
 
-                    <a href="about.html" class="view-tours-link">
-                        <span class="arrow">→</span>READ MORE
-                    </a>
+                        <a href="about.html" class="view-tours-link">
+                            <span class="arrow">→</span>READ MORE
+                        </a>
                     <div class="view-tours-underline"></div>
 
                 </div>
@@ -1343,21 +1344,22 @@
 
                 <!-- TANZANIA MIGRATION -->
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
-                    <div class="tour-card">
-                        <img src="img/tarangire.png" class="tour-img" alt="Kilimora Safari Tour">
-                        <br><br>
-                        <div class="tour-tag-box">
-                            <span>📅 10 Days</span>
-                            <span>📍 Tarangire National Park</span>
-                        </div>
+                    <a href="daybest-tarangire-manyara.html" class="d-block text-decoration-none h-100">
+                        <div class="tour-card h-100">
+                            <img src="img/tarangire.png" class="tour-img" alt="Kilimora Safari Tour">
+                            <br><br>
+                            <div class="tour-tag-box">
+                                <span>📅 2 Days</span>
+                                <span>📍 Day Best of Tarangire and Lake Manyara National Park</span>
+                            </div>
 
-                        <div class="tour-content">
-                            <div class="rating">★★★★★</div>
-                            <h5>10 Days Exclusive Tarangire Safari</h5>
-                            <p class="tour-tag">🏁 TARANGIRE, MANYARA, NGORONGORO, SERENGETI</p>
-                            <div class="arrow-link">→</div>
+                            <div class="tour-content">
+                                <div class="rating">★★★★★</div>
+                                <h5>2 Day Best of Tarangire and Lake Manyara National Park</h5>
+                                <div class="arrow-link">→</div>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
                 <div class="col-lg-4 col-md-6 tour-card-item tanzania">
